<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include
        android:id="@+id/toolbarLayout"
        layout="@layout/layout_top_bar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/img_otp_verification"
                android:layout_width="0dp"
                android:layout_height="260dp"
                android:contentDescription="@string/otp_verification"
                android:src="@drawable/ic_otp_verify"
                app:layout_constraintEnd_toEndOf="@id/guideline_end"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="@id/guideline_start"
                app:layout_constraintTop_toBottomOf="@+id/txt_detail_otp" />

            <TextView
                android:id="@+id/txt_detail_otp"
                style="@style/SubTitle"
                android:layout_marginTop="16dp"
                android:gravity="center"
                android:text="@string/one_time_password_have_been_sent_to_your_mobile_number"
                app:layout_constraintEnd_toEndOf="@id/guideline_end"
                app:layout_constraintStart_toStartOf="@id/guideline_start"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/txt_mobile_number"
                style="@style/SubTitle.Bold"
                android:layout_marginTop="16dp"
                android:gravity="center"
                android:text="@string/_91"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/img_otp_verification" />

            <TextView
                android:id="@+id/txt_otp_instruction"
                style="@style/SubTitle"
                android:layout_marginTop="16dp"
                android:gravity="center"
                android:text="@string/enter_the_otp_sent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt_mobile_number" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline_start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.10" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline_end"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.90" />

            <EditText
                android:id="@+id/input_code_1"
                style="@style/OtpInputEditText"
                android:layout_marginTop="12dp"
                android:importantForAutofill="no"
                app:layout_constraintEnd_toStartOf="@+id/input_code_2"
                app:layout_constraintStart_toStartOf="@id/guideline_start"
                app:layout_constraintTop_toBottomOf="@id/txt_otp_instruction"
                tools:ignore="LabelFor" />

            <EditText
                android:id="@+id/input_code_2"
                style="@style/OtpInputEditText"
                android:importantForAutofill="no"
                app:layout_constraintEnd_toStartOf="@+id/input_code_3"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/input_code_1"
                app:layout_constraintTop_toTopOf="@+id/input_code_1"
                tools:ignore="LabelFor" />

            <EditText
                android:id="@+id/input_code_3"
                style="@style/OtpInputEditText"
                android:importantForAutofill="no"
                app:layout_constraintEnd_toStartOf="@+id/input_code_4"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/input_code_2"
                app:layout_constraintTop_toTopOf="@+id/input_code_1"
                tools:ignore="LabelFor" />

            <EditText
                android:id="@+id/input_code_4"
                style="@style/OtpInputEditText"
                android:importantForAutofill="no"
                app:layout_constraintEnd_toStartOf="@+id/input_code_5"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/input_code_3"
                app:layout_constraintTop_toTopOf="@+id/input_code_1"
                tools:ignore="LabelFor" />

            <EditText
                android:id="@+id/input_code_5"
                style="@style/OtpInputEditText"
                android:importantForAutofill="no"
                app:layout_constraintEnd_toStartOf="@+id/input_code_6"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/input_code_4"
                app:layout_constraintTop_toTopOf="@+id/input_code_1"
                tools:ignore="LabelFor" />

            <EditText
                android:id="@+id/input_code_6"
                style="@style/OtpInputEditText"
                android:imeOptions="actionDone"
                android:importantForAutofill="no"
                app:layout_constraintEnd_toEndOf="@id/guideline_end"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/input_code_5"
                app:layout_constraintTop_toTopOf="@+id/input_code_1"
                tools:ignore="LabelFor" />


            <TextView
                android:id="@+id/otp_timer"
                style="@style/SubTitle"
                android:layout_width="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/did_not_receive_the_otp"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/txt_resend_otp"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/input_code_1"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/txt_resend_otp"
                style="@style/SubTitle.Bold"
                android:layout_width="wrap_content"
                android:layout_marginStart="4dp"
                android:enabled="false"
                android:gravity="center_vertical"
                android:text="@string/resend_otp"
                android:textColor="@color/resend_btn_selector"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="@+id/otp_timer"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/otp_timer"
                app:layout_constraintTop_toTopOf="@+id/otp_timer" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <include
        android:id="@+id/btn_progress_layout"
        layout="@layout/layout_progress_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/submit_button_margin_bottom" />



</LinearLayout>