<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/FillParentScrollViewStyle"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingHorizontal="8dp">

        <include
            android:id="@+id/screen_title"
            layout="@layout/layout_screen_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.cardview.widget.CardView
            android:id="@+id/float_tender_cardview"
            style="@style/CardViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="@dimen/margin_bottom_covering_bottom"
            app:cardCornerRadius="12dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.6"
            tools:visibility="visible">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/txt_login_create_acc"
                    style="@style/Title.Bold"
                    android:layout_width="0dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="32dp"
                    android:layout_marginEnd="12dp"
                    android:fontFamily="@font/inter_semibold"
                    android:text="@string/login_amp_create_account"
                    android:textSize="22sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/txt_choose_login_opt"
                    style="@style/SubTitle.Bold"
                    android:layout_marginTop="8dp"
                    android:text="@string/choose_login_option"
                    android:textSize="14sp"
                    app:layout_constraintEnd_toEndOf="@id/txt_login_create_acc"
                    app:layout_constraintStart_toStartOf="@id/txt_login_create_acc"
                    app:layout_constraintTop_toBottomOf="@id/txt_login_create_acc" />

                <RadioGroup
                    android:id="@+id/login_with_tab_group"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="12dp"
                    android:orientation="horizontal"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/txt_choose_login_opt">

                    <androidx.appcompat.widget.AppCompatRadioButton
                        android:id="@+id/phone_login_radio_btn"
                        style="@style/TabRadioButton"
                        android:layout_marginEnd="4dp"
                        android:checked="true"
                        android:text="@string/phone" />

                    <androidx.appcompat.widget.AppCompatRadioButton
                        android:id="@+id/email_login_radio_btn"
                        style="@style/TabRadioButton"
                        android:layout_marginStart="4dp"
                        android:text="@string/email" />
                </RadioGroup>


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/input_number"
                    style="@style/InputTextLayout.ErrorStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:hint="@string/mobile_number"
                    app:layout_constraintEnd_toEndOf="@id/login_with_tab_group"
                    app:layout_constraintStart_toStartOf="@id/login_with_tab_group"
                    app:layout_constraintTop_toBottomOf="@id/login_with_tab_group"
                    app:prefixText="@string/_91"
                    app:startIconDrawable="@drawable/ic_phone_24"
                    >

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_number"
                        style="@style/InputEditTextLayout"
                        android:inputType="phone" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/input_email"
                    style="@style/InputTextLayout.ErrorStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:hint="@string/email"
                    android:visibility="gone"
                    app:layout_constraintEnd_toEndOf="@id/login_with_tab_group"
                    app:layout_constraintStart_toStartOf="@id/login_with_tab_group"
                    app:layout_constraintTop_toBottomOf="@id/login_with_tab_group"
                    app:startIconDrawable="@drawable/ic_email_black">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_email"
                        style="@style/InputEditTextLayout"
                        android:inputType="textEmailAddress"
                        android:maxLines="2" />
                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/input_password"
                    style="@style/InputTextLayout.ErrorStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:visibility="gone"
                    app:endIconCheckable="true"
                    app:endIconMode="password_toggle"
                    app:layout_constraintEnd_toEndOf="@id/input_email"
                    app:layout_constraintStart_toStartOf="@id/input_email"
                    app:layout_constraintTop_toBottomOf="@id/input_email"
                    app:startIconDrawable="@drawable/ic_password">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_password"
                        style="@style/InputEditTextLayout"
                        android:inputType="textPassword"
                        android:maxLines="2" />
                </com.google.android.material.textfield.TextInputLayout>


                <include
                    android:id="@+id/btn_progress_layout"
                    layout="@layout/layout_progress_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:layout_marginBottom="32dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@id/login_with_tab_group"
                    app:layout_constraintStart_toStartOf="@id/login_with_tab_group"
                    app:layout_constraintTop_toBottomOf="@id/google_login"  />

                <View
                    android:id="@+id/horizontal_divider"
                    style="@style/ViewDivider"
                    android:layout_width="0dp"
                    android:layout_marginTop="16dp"
                    app:layout_constraintEnd_toEndOf="@id/login_with_tab_group"
                    app:layout_constraintStart_toStartOf="@id/login_with_tab_group"
                    app:layout_constraintTop_toBottomOf="@id/input_password"
                    app:layout_goneMarginTop="108dp" />

                <TextView
                    android:id="@+id/txt_or"
                    style="@style/SubHeadLine"
                    android:layout_width="wrap_content"
                    android:background="?colorOnPrimary"
                    android:gravity="center"
                    android:text="@string/or"
                    app:layout_constraintBottom_toBottomOf="@id/horizontal_divider"
                    app:layout_constraintEnd_toEndOf="@id/horizontal_divider"
                    app:layout_constraintStart_toStartOf="@id/horizontal_divider"
                    app:layout_constraintTop_toTopOf="@id/horizontal_divider" />

                <ImageView
                    android:id="@+id/google_login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="16dp"
                    android:src="@drawable/ic_google"
                    app:layout_constraintEnd_toEndOf="@id/guideline"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/txt_or" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guideline"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_percent="0.5" />

                <ImageView
                    android:id="@+id/email_login_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="24dp"
                    android:src="@drawable/ic_email"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="@id/guideline"
                    app:layout_constraintTop_toBottomOf="@id/txt_or" />

                <ImageView
                    android:id="@+id/phone_login_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="24dp"
                    android:src="@drawable/ic_message"
                    android:visibility="invisible"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@id/guideline"
                    app:layout_constraintTop_toBottomOf="@id/txt_or" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <include
            android:id="@+id/error_layout"
            layout="@layout/layout_empty_or_error_state"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>